--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -36,7 +36,7 @@ const currentYear = new Date().getFullYear();
     </div>
     <div class="border-t border-gray-600 mt-8 pt-8 text-center">
       <p>&copy; {currentYear} TechPi Solutions. All rights reserved.</p>
-      <p>Designed By Code Samaaj</p>
+      <p>Designed By <a href="https://codesamaaj.com/" class="hover:text-accent"> Code Samaaj</a></p>
     </div>
   </div>
 </footer>
