--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -51,8 +51,8 @@ const schema = {
           </p>
           
           <form class="space-y-6">
-            <div>
-              <div>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+              <div >
                 <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Name</label>
                 <input
                   type="text"
@@ -61,6 +61,13 @@ const schema = {
                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary focus:border-primary"
                   required
                 />
+              </div>
+              <div>
+                <label for="company" class="block text-sm font-medium text-gray-700 mb-1">Company</label>
+                <input type="text" id="company"
+                  name="company"
+                  class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary focus:border-primary"
+                  required>
               </div>
             </div>
             
@@ -98,10 +105,11 @@ const schema = {
           <script>
             document.getElementById('submitButton').addEventListener('click', () => {
               const name = (document.getElementById('name') as HTMLInputElement).value;
+              const company = (document.getElementById('company') as HTMLInputElement).value;
               const subject = (document.getElementById('subject') as HTMLInputElement).value;
               const message = (document.getElementById('message') as HTMLTextAreaElement).value;
               
-              const body = `Name: ${name}\n\nMessage:\n${message}`;
+              const body = `Myself ${name} from ${company},\n\n${message}`;
               const mailtoUrl = `mailto:project.techpi@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
               window.location.href = mailtoUrl;
             });
