--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -34,7 +34,7 @@ const products = [
     features: {
       'Panel Types': [
         'Main LT Panel up to 6000A, 70kA',
-        'AMF/DG Synchronising Panel with PLC or Load Sharing Technology',
+        'AMF/DG Synchronizing Panel with PLC or Load Sharing Technology',
         'APFCR Panel (Automatic Power Factor Correction)',
         'Power Control Centre Panel (PCC)',
         'Motor Control Centre Panels (MCC)',
