--- a/src/components/CustomerSection.astro
+++ b/src/components/CustomerSection.astro
@@ -68,9 +68,11 @@ const customers = [
 ---
 
 <section class="py-20 relative z-30">
-  <div class="container mx-auto px-4">
-    <h2 class="text-4xl font-bold text-center mb-4 text-white">Trusted by Industry Leaders</h2>
-    <p class="text-xl text-white text-center mb-12">Delivering excellence to companies nationwide</p>
+  <div class="container flex flex-col justify-center px-4 ">
+    <div class="mx-auto shadow-lg bg-black bg-opacity-40 backdrop-blur-sm p-6 py-8 rounded-lg text-center mb-12 ">
+      <h2 class="text-4xl font-bold text-accent/90">Trusted by Industry Leaders</h2>
+      <p class="text-xl text-white">Delivering excellence to companies nationwide</p>
+    </div>
     
     <div class="overflow-hidden">
       <div class="flex gap-8 animate-scroll whitespace-nowrap">
