--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const currentYear = new Date().getFullYear();
   <div class="container mx-auto px-4 py-12">
     <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
       <div>
-        <h3 class="text-xl font-bold mb-4">TechPI Solutions <span class="font-light">&reg;</span></h3>
+        <h3 class="text-xl font-bold mb-4">Tech PI Solutions <span class="font-light">&reg;</span></h3>
         <p>Leading manufacturer of Cable Trays and Low Voltage Panels</p>
       </div>
       <div>
@@ -35,7 +35,7 @@ const currentYear = new Date().getFullYear();
       </div>
     </div>
     <div class="border-t border-gray-600 mt-8 pt-8 text-center">
-      <p>&copy; {currentYear} TechPi Solutions. All rights reserved.</p>
+      <p>&copy; {currentYear} Tech PI Solutions. All rights reserved.</p>
       <p>Designed by <a href="https://codesamaaj.com/" class="hover:text-accent"> Code Samaaj.</a></p>
     </div>
   </div>
