--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -55,8 +55,8 @@ const navItems = [
           </div>
           <div class="flex flex-col">
             <h1 class="text-2xl md:text-3xl font-bold tracking-widest">
-                <span class="headerr">TECHPi</span>
-                <span class="font-medium tracking-tighter">&reg;</span>
+                <span class="headerr">TECH PI</span>
+                <span class=" font-medium tracking-tighter absolute top-0">&reg;</span>
             </h1>
             <span class="company-name text-lg text-accent/90 font-medium tracking-widest uppercase">Solutions</span>
           </div>
