gallery page added

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,50 +6,54 @@ const projects = [
   { company: "Meenakshi Techpark", location: "Hyderabad" },
   { company: "Spandana Sphoorty", location: "Hyderabad" },
   { company: "Dupont DSCI", location: "Hyderabad" },
-  { company: "Paradise", location: "Hyderabad" },
+  { company: "Paradise Food Court", location: "Hyderabad" },
   { company: "Vasu Hospital", location: "Bidar" },
   { company: "Pragya Mall Food Court", location: "Hyderabad" },
   { company: "Speed Infra", location: "Hyderabad" },
   { company: "ISB", location: "Hyderabad" },
   { company: "Gloplax", location: "Hyderabad" },
-  { company: "Verizon", location: "Hyderabad" },
+  { company: "Verizon India", location: "Hyderabad" },
   { company: "HCL", location: "Hyderabad" },
   { company: "Q Spider", location: "Hyderabad" },
+  { company: "Divyasree", location: "Hyderabad" },
   { company: "Trinity Food Court", location: "Hyderabad" },
   { company: "JSW", location: "Pune" },
   { company: "BA Continum India", location: "Hyderabad" },
-  { company: "Indhan Fevorich", location: "Hubballi" },
-  { company: "Bank of America", location: "Hyderabad" },
+  { company: "Indhan industries pvt ltd", location: "Bangalore" },
+  { company: "Bank Of America", location: "Hyderabad" },
   { company: "BTG", location: "Hyderabad" },
   { company: "NCR", location: "Hyderabad" },
-  { company: "ISB B & D Block", location: "Hyderabad" },
-  { company: "Verizon 7th Floor", location: "Hyderabad" },
-  { company: "Schrodinger", location: "Hyderabad" },
+  { company: "Schrodinger India Pvt ltd", location: "Hyderabad" },
   { company: "CDK", location: "Hyderabad" },
   { company: "Qualcomm", location: "Bangalore" },
+  { company: "Qualcomm", location: "Hyderabad" },
   { company: "Fisker", location: "Hyderabad" },
   { company: "Meghana Conventional Hall", location: "Hyderabad" },
   { company: "Kshema", location: "Hyderabad" },
-  { company: "Verizon 6th Floor", location: "Hyderabad" },
   { company: "Verisk", location: "Hyderabad" },
   { company: "CGI", location: "Bangalore" },
   { company: "Hyundai Motors", location: "Hyderabad" },
   { company: "Mouritech", location: "Pune" },
+  { company: "Mouritech", location: "Hyderabad" },
   { company: "Simply South", location: "Hyderabad" },
   { company: "Ovation Services", location: "Hyderabad" },
   { company: "MYK Laticrete", location: "Hyderabad" },
-  { company: "Sutherland 8th Floor", location: "Hyderabad" },
-  { company: "International Premium Lounge", location: "Hyderabad" },
+  { company: "Sutherland", location: "Hyderabad" },
+  { company: "International Premium Launge", location: "Hyderabad" },
   { company: "MSN Urban Venture", location: "Hyderabad" },
-  { company: "Meenakshi C Wing", location: "Hyderabad" },
   { company: "Ameriprise", location: "Hyderabad" },
   { company: "Intouch", location: "Hyderabad" },
   { company: "Wells Fargo", location: "Hyderabad" },
   { company: "League Mall", location: "Hyderabad" },
-  { company: "Sutherland 9th Floor", location: "Hyderabad" },
-  { company: "Mouritech", location: "Hyderabad" },
+  { company: "RSM", location: "Hyderabad" },
   { company: "Goldman Sachs", location: "Hyderabad" },
-  { company: "AMD", location: "Hyderabad" }
+  { company: "AMD", location: "Hyderabad" },
+  { company: "Aparna Constructions", location: "Hyderabad" },
+  { company: "We works", location: "Hyderabad" },
+  { company: "Hindustan foods limited", location: "Hyderabad" },
+  { company: "Nandu chemical industries", location: "Bangalore" },
+  { company: "Mann + hummel", location: "Bangalore" },
+    { company: "Favorich", location: "Bangalore" }
 ];
 
 // Remove duplicate entries
