--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,6 +20,10 @@ const navItems = [
     href: '/projects', 
     text: 'Projects' 
   },
+  {
+    href: '/gallery',
+    text: 'Gallery'
+  },
   { 
     href: '/about', 
     text: 'About Us',
