--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@
     <div class="absolute inset-0 moving-background"></div>
     <div class="absolute inset-0 bg-black opacity-10"></div>
     
-    <div class="relative mt-24  md:mt-16 h-full container mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-center py-12 sm:py-16">
+    <div class="relative mt-24  h-full container mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-center py-12 sm:py-16">
         <div class="w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center relative z-10">
             <div 
                 class="max-w-3xl mx-auto text-center mb-8 sm:mb-16 shadow-lg p-4 sm:p-8 backdrop-blur-md rounded-lg bg-black/40" 
