--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -51,7 +51,7 @@ const founders = [
     image: "/images/b.jpg"
   },
   {
-    name: "Raja T",
+    name: "Thanniru Raja",
     position: "General Manager",
     bio: "Mr. Raja has over 12 years of experience in the electrical industry, specializing in LT panels and cable trays. His technical expertise and project management skills have been instrumental in delivering quality products and services to our clients.",
     image: "/images/raja.jpg"
